// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute-based modifier 1`] = `
"() => create(Foo, {
  \\"className\\": \\"Foo_5cc\\"
});

Styles.include(\`
	.Foo_1u9 { 
		background: red;
		color: white;
	}
\`);"
`;

exports[`Attribute-based modifier 2`] = `
"() => <Foo className=\\"Foo_5cc\\" />;

Styles.include(\`
	.Foo_1u9 { 
		background: red;
		color: white;
	}
\`);"
`;

exports[`Explicitly use modifier 1`] = `
"() => create(Fragment, {}, create(Baz, {
  \\"className\\": \\"Foo_36o Baz_3rl\\"
}), create(Foo, {
  \\"className\\": \\"Foo_36o\\"
}));

Styles.include(\`
	.Foo_erd { 
		color: blue;
	}
	.Baz_1u9 { 
		color: red;
	}
\`);"
`;

exports[`Explicitly use modifier 2`] = `
"() => <Fragment><Baz className=\\"Foo_36o Baz_3rl\\" /><Foo className=\\"Foo_36o\\" /></Fragment>;

Styles.include(\`
	.Foo_erd { 
		color: blue;
	}
	.Baz_1u9 { 
		color: red;
	}
\`);"
`;

exports[`Nested modifier 1`] = `
"() => create(Fragment, {}, create(Foo, {
  \\"className\\": \\"Foo_36o\\"
}), create(Bar, {}, create(Foo, {
  \\"className\\": \\"Foo_36o Foo_343\\"
})));

Styles.include(\`
	.Foo_erd { 
		color: red;
	}
	.Foo_51a { 
		color: blue;
	}
\`);"
`;

exports[`Nested modifier 2`] = `
"() => <Fragment><Foo className=\\"Foo_36o\\" /><Bar><Foo className=\\"Foo_36o Foo_343\\" /></Bar></Fragment>;

Styles.include(\`
	.Foo_erd { 
		color: red;
	}
	.Foo_51a { 
		color: blue;
	}
\`);"
`;

exports[`Simple modifier 1`] = `
"() => create(Foo, {
  \\"className\\": \\"Foo_5cc\\"
});

Styles.include(\`
	.Foo_1u9 { 
		color: red;
	}
\`);"
`;

exports[`Simple modifier 2`] = `
"() => <Foo className=\\"Foo_5cc\\" />;

Styles.include(\`
	.Foo_1u9 { 
		color: red;
	}
\`);"
`;

exports[`collapse single-use modifiers 1`] = `
"() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_14s\\"
}));

Styles.include(\`
	.Bar_7qc { 
		border: red solid 1px;
		background: white;
		color: red;
	}
\`);"
`;

exports[`collapse single-use modifiers 2`] = `
"() => <Foo><Bar className=\\"Bar_14s\\" /></Foo>;

Styles.include(\`
	.Bar_7qc { 
		border: red solid 1px;
		background: white;
		color: red;
	}
\`);"
`;
